--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,5 @@
 ---
+# This playbook deploys a simple standalone Tomcat 7 server.
 
 - hosts: tomcat-servers
   remote_user: root
@@ -6,7 +7,5 @@
   become_method: sudo
 
   roles:
-    selinux
-    tomcat
-
-    
+    - selinux
+    - tomcat
