--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -10,28 +10,27 @@
   become: True
   become_method: sudo
 
-- name: Download Tomcat 
-  get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt//apache-tomcat-7.0.61.tar.gz
+- name: Download Tomcat
+  get_url: url=http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.61/bin/apache-tomcat-7.0.61.tar.gz dest=/opt/apache-tomcat-7.0.61.tar.gz
 
+- name: Extract archive
+  command: chdir=/usr/share /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
 
-- name: Extract the archive
-  command: chdir=/usr/share/ /bin/tar xvf /opt/apache-tomcat-7.0.61.tar.gz -C /opt/ creates=/opt/apache-tomcat-7.0.61
-
-- name: Symlink the install directory
+- name: Symlink install directory
   file: src=/opt/apache-tomcat-7.0.61 path=/usr/share/tomcat state=link
 
-- name: Change ownership of tomcat installation directory
+- name: Change ownership of Tomcat installation
   file: path=/usr/share/tomcat/ owner=tomcat group=tomcat state=directory recurse=yes
 
-- name: Configure Tomcat Server
+- name: Configure Tomcat server
   template: src=server.xml dest=/usr/share/tomcat/conf/
   notify: restart tomcat
 
-- name: Configure Tomcat Users ###
-  template: src=tomcat-users.xml dest=/etc/init.d/share/tomcat mode=0755
+- name: Configure Tomcat users
+  template: src=tomcat-users.xml dest=/usr/share/tomcat/conf/
   notify: restart tomcat
 
-- name: Install tomcat init script.
+- name: Install Tomcat init script
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=0755
 
 - name: Start Tomcat
@@ -42,15 +41,13 @@
   when: "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '6'"
   notify: restart iptables
 
-- name: insert firewalld rule for tomcat http port enabling
-  firewalld: port= {{http_port}}/tcp permanent=true state=enabled immediate=yes
-  when "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '7'"
+- name: insert firewalld rule for tomcat http port
+  firewalld: port={{ http_port }}/tcp permanent=true state=enabled immediate=yes
+  when: "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '7'"
 
-- name: wait for the tomcat port to started
+- name: insert firewalld rule for tomcat https port
+  firewalld: port={{ https_port }}/tcp permanent=true state=enabled immediate=yes
+  when: "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '7'"
+
+- name: wait for tomcat to start
   wait_for: port={{http_port}}
-
-  
-
-
-
-  
